fix ControlRows spacing

--- a/grapher/controls/ControlsRow.scss
+++ b/grapher/controls/ControlsRow.scss
@@ -8,9 +8,10 @@
     /* blue dark */
     color: #1d3d63;
 
+    margin: 12px 0px;
     margin-left: 15px;
 
     > .control:not(:first-child) {
-        margin-left: 10px;
+        margin-left: 16px;
     }
 }
